cycronet-build/src/cronet_bindings_linux.rs

extern "C" {
    pub fn Cronet_Metrics_connect_end_set(
        self_: Cronet_MetricsPtr,
        connect_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_connect_end_move(
        self_: Cronet_MetricsPtr,
        connect_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_ssl_start_set(self_: Cronet_MetricsPtr, ssl_start: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_ssl_start_move(self_: Cronet_MetricsPtr, ssl_start: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_ssl_end_set(self_: Cronet_MetricsPtr, ssl_end: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_ssl_end_move(self_: Cronet_MetricsPtr, ssl_end: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_sending_start_set(
        self_: Cronet_MetricsPtr,
        sending_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_sending_start_move(
        self_: Cronet_MetricsPtr,
        sending_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_sending_end_set(
        self_: Cronet_MetricsPtr,
        sending_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_sending_end_move(
        self_: Cronet_MetricsPtr,
        sending_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_push_start_set(self_: Cronet_MetricsPtr, push_start: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_push_start_move(self_: Cronet_MetricsPtr, push_start: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_push_end_set(self_: Cronet_MetricsPtr, push_end: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_push_end_move(self_: Cronet_MetricsPtr, push_end: Cronet_DateTimePtr);
}
extern "C" {
    pub fn Cronet_Metrics_response_start_set(
        self_: Cronet_MetricsPtr,
        response_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_response_start_move(
        self_: Cronet_MetricsPtr,
        response_start: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_request_end_set(
        self_: Cronet_MetricsPtr,
        request_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_request_end_move(
        self_: Cronet_MetricsPtr,
        request_end: Cronet_DateTimePtr,
    );
}
extern "C" {
    pub fn Cronet_Metrics_socket_reused_set(self_: Cronet_MetricsPtr, socket_reused: bool);
}
extern "C" {
    pub fn Cronet_Metrics_sent_byte_count_set(self_: Cronet_MetricsPtr, sent_byte_count: i64);
}
extern "C" {
    pub fn Cronet_Metrics_received_byte_count_set(
        self_: Cronet_MetricsPtr,
        received_byte_count: i64,
    );
}
extern "C" {
    pub fn Cronet_Metrics_request_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_dns_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_dns_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_connect_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_connect_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_ssl_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_ssl_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_sending_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_sending_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_push_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_push_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_response_start_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_request_end_get(self_: Cronet_MetricsPtr) -> Cronet_DateTimePtr;
}
extern "C" {
    pub fn Cronet_Metrics_socket_reused_get(self_: Cronet_MetricsPtr) -> bool;
}
extern "C" {
    pub fn Cronet_Metrics_sent_byte_count_get(self_: Cronet_MetricsPtr) -> i64;
}
extern "C" {
    pub fn Cronet_Metrics_received_byte_count_get(self_: Cronet_MetricsPtr) -> i64;
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_Create() -> Cronet_RequestFinishedInfoPtr;
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_Destroy(self_: Cronet_RequestFinishedInfoPtr);
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_metrics_set(
        self_: Cronet_RequestFinishedInfoPtr,
        metrics: Cronet_MetricsPtr,
    );
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_metrics_move(
        self_: Cronet_RequestFinishedInfoPtr,
        metrics: Cronet_MetricsPtr,
    );
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_annotations_add(
        self_: Cronet_RequestFinishedInfoPtr,
        element: Cronet_RawDataPtr,
    );
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_finished_reason_set(
        self_: Cronet_RequestFinishedInfoPtr,
        finished_reason: Cronet_RequestFinishedInfo_FINISHED_REASON,
    );
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_metrics_get(
        self_: Cronet_RequestFinishedInfoPtr,
    ) -> Cronet_MetricsPtr;
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_annotations_size(self_: Cronet_RequestFinishedInfoPtr)
        -> u32;
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_annotations_at(
        self_: Cronet_RequestFinishedInfoPtr,
        index: u32,
    ) -> Cronet_RawDataPtr;
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_annotations_clear(self_: Cronet_RequestFinishedInfoPtr);
}
extern "C" {
    pub fn Cronet_RequestFinishedInfo_finished_reason_get(
        self_: Cronet_RequestFinishedInfoPtr,
    ) -> Cronet_RequestFinishedInfo_FINISHED_REASON;
}

// --- WebSocket C API bindings ---

pub type Cronet_WebSocketPtr = *mut ::std::os::raw::c_void;

pub const Cronet_WebSocket_MESSAGE_TEXT: u32 = 1;
pub const Cronet_WebSocket_MESSAGE_BINARY: u32 = 2;
pub type Cronet_WebSocket_MessageType = u32;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Cronet_WebSocket_Callbacks {
    pub on_open: ::std::option::Option<
        unsafe extern "C" fn(
            ws: Cronet_WebSocketPtr,
            user_data: *mut ::std::os::raw::c_void,
            protocol: *const ::std::os::raw::c_char,
        ),
    >,
    pub on_message: ::std::option::Option<
        unsafe extern "C" fn(
            ws: Cronet_WebSocketPtr,
            user_data: *mut ::std::os::raw::c_void,
            msg_type: Cronet_WebSocket_MessageType,
            data: *const ::std::os::raw::c_void,
            len: u64,
        ),
    >,
    pub on_close: ::std::option::Option<
        unsafe extern "C" fn(
            ws: Cronet_WebSocketPtr,
            user_data: *mut ::std::os::raw::c_void,
            was_clean: ::std::os::raw::c_int,
            code: u16,
            reason: *const ::std::os::raw::c_char,
        ),
    >,
    pub on_error: ::std::option::Option<
        unsafe extern "C" fn(
            ws: Cronet_WebSocketPtr,
            user_data: *mut ::std::os::raw::c_void,
            net_error: ::std::os::raw::c_int,
            message: *const ::std::os::raw::c_char,
        ),
    >,
}

extern "C" {
    pub fn Cronet_WebSocket_Create(
        engine: Cronet_EnginePtr,
        callbacks: *const Cronet_WebSocket_Callbacks,
        user_data: *mut ::std::os::raw::c_void,
    ) -> Cronet_WebSocketPtr;
}
extern "C" {
    pub fn Cronet_WebSocket_Connect(
        ws: Cronet_WebSocketPtr,
        url: *const ::std::os::raw::c_char,
        sub_protocols: *const ::std::os::raw::c_char,
        origin: *const ::std::os::raw::c_char,
        extra_headers: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn Cronet_WebSocket_Send(
        ws: Cronet_WebSocketPtr,
        msg_type: Cronet_WebSocket_MessageType,
        data: *const ::std::os::raw::c_void,
        len: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn Cronet_WebSocket_Close(
        ws: Cronet_WebSocketPtr,
        code: u16,
        reason: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn Cronet_WebSocket_Destroy(ws: Cronet_WebSocketPtr);
}
